--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   </head>
   <body>
     <h1 class="title has-text-centered py-6">Movers Not Shakers</h1>
-    <div class="columns">
-      <div class="column is-7 is-size-5">
-        <h2 classs="is-size-1">Description</h2>
-        <p>
+
+    <div class="tile is-ancestor">
+      <div class="tile is-6 is-vertical is-parent">
+        <p class="title">Description</p>
+        <p class="subtitle">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -24,31 +25,38 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
+        <div class="tile is-6 is-child is-size-5">
+          <p class="title">Search</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+        <div class="tile is-4 is-child is-size-5">
+          <p class="title">Return Image</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
       </div>
-      <div class="column is-3 is-offset-4 is-size-6">
-        Map
+      <div class="tile is-10 is-parent">
+        <div class="tile is-child box is-danger">
+          <p class="title">Map</p>
+          <div class="tile is-10">
+            <img src="./assets/images/maptest.gif" alt="image of a map" />
+          </div>
+        </div>
       </div>
     </div>
-      <div class="columns">
-        <div class="column is-4 is-size-6">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-      </div>
-      <div class="columns">
-        <div class="column is-3 is-size-6">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. mollit
-          anim id est laborum.
-        </div>
-      </div>
     <footer
-      class="is-size-5 has-text-centered has-text-danger mt-6 mr-6 pb-6 pl-6">
+      class="is-size-5 has-text-centered has-text-danger mt-6 mr-6 pb-6 pl-6"
+    >
       Movers Not Shakers Inc.
     </footer>
   </body>
