--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <title>Movers Not Shakers</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
+  <!-- BODY--> 
   <body>
+      <!-- HEADER 1--> 
     <h1 class="title has-text-centered py-6">Movers Not Shakers</h1>
-
+<!-- TILES--> 
     <div class="tile is-ancestor">
       <div class="tile is-6 is-vertical is-parent">
         <p class="title">Description</p>
@@ -54,6 +56,7 @@
         </div>
       </div>
     </div>
+<!-- FOOTER-->     
     <footer
       class="is-size-5 has-text-centered has-text-danger mt-6 mr-6 pb-6 pl-6"
     >
