--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <!-- favicon here -->
+    <link rel="icon" type="image/png" href="./assets/images/earthquake-favicon.png" />
     <title>Movers Not Shakers</title>
   </head>
   <!-- BODY--> 
