linked font awesome to use icons

--- a/index.html
+++ b/index.html
@@ -36,14 +36,21 @@
         <div class="tile is-6 is-child is-size-5 box">
           <p class="title">Search</p>
           <div class="field">
-            <div class="control">
+            <div class="control has-icons-left">
               <input class="input is-info is-rounded is-medium" type="text" placeholder="Country">
-              <div class="select is-info">
+              <span class="icon is-left">
+                <i class="fas fa-globe"></i>
+              </span>
+            </div>
+          </div>
+          <div class="field">
+            <div class="control">
+              <div class="select is-info is-rounded">
                 <select>
                   <option>Select Timeframe</option>
-                  <option> 1 year</option>
-                  <option> 5 years</option>
-                  <option> 10 years</option>
+                  <option>Past Year</option>
+                  <option>Past 5 Years</option>
+                  <option>Past 10 Years</option>
                 </select>
               </div>
             </div>
@@ -78,6 +85,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <!-- Bulma placeholder script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
