added link to js and google API key link

--- a/index.html
+++ b/index.html
@@ -64,5 +64,10 @@
     >
       Movers Not Shakers Inc.
     </footer>
+<!-- JS links -->
+    <script src="assets/js/script.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDShJHEIb-
+    ZJYOLJ5NoEHOUFcN8DhtPltk&callback=initMap"
+    type="text/javascript"></script>
   </body>
 </html>
