tested search button

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <!-- Search Form -->
-        <!-- Working on putting icons in and creating dropdown w/ selections -->
         <div class="tile is-6 is-child is-size-5">
           <p class="title">Search</p>
-          <div class="field is-grouped">
+          <div class="field is-grouped" id="search-form">
             <div class="control has-icons-left">
               <input class="input is-info is-rounded is-medium" type="text" placeholder="Country" id="search-term">
               <span class="icon is-left">
@@ -43,7 +42,7 @@
               </span>
             </div>
             <div class="control has-icons-left">
-              <button class="button is-info is-medium" id="search-btn">
+              <button class="button is-info is-medium" type="submit" id="search-btn">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
