added google api key

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     </footer>
 <!-- JS links -->
     <script src="assets/js/script.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDShJHEIb-
-    ZJYOLJ5NoEHOUFcN8DhtPltk&callback=initMap"
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDh_
+      l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=initMap"
     type="text/javascript"></script>
   </body>
 </html>
