updated map to center on current location, if your location is not enabled it will go to default

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
     </footer>
 <!-- Google API link -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDh_
-      l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=createMap"
+      l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=createMap&libraries=places"
     type="text/javascript"></script>
+<!-- Search links -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
