--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </footer>
 <!-- Google API link -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDh_
-      l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=createMap&libraries=places"
+      l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=initMap&libraries=places"
     type="text/javascript"></script>
 <!-- Search links -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
