--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
               <div class="select is-info is-rounded">
                 <select id="timeframe">
                   <option selected>Select Timeframe</option>
-                  <option class="option" data-timeframe="one-year">Past Year</option>
-                  <option class="option" data-timeframe="five-years">Past 5 Years</option>
-                  <option class="option" data-timeframe="ten-years">Past 10 Years</option>
+                  <option class="option opt-1" data-timeframe="one-year">Past Year</option>
+                  <option class="option opt-2" data-timeframe="five-years">Past 5 Years</option>
+                  <option class="option opt-3" data-timeframe="ten-years">Past 10 Years</option>
                 </select>
               </div>
               <div class="icon is-small is-left">
