--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </button>
             </div>
           </div>
-          <div class="field">
+          <!-- <div class="field">
             <div class="control has-icons-left">
               <div class="select is-info is-rounded">
                 <select id="timeframe">
@@ -63,7 +63,7 @@
                 <i class="fas fa-history"></i>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <!-- Earthquake API Return -->
         <div class="tile is-4 is-child is-size-5">
