added weather to page

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
           </div> -->
         </div>
         <!-- Earthquake API Return -->
-        <div class="tile is-4 is-child is-size-5">
-          <p class="title">Return Image</p>
-          <p>
+        <div class="tile is-4 is-child is-size-5" id="weather-container">
+          <p class="title">Today's Forecast</p>
+          <!-- <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
+          </p> -->
         </div>
       </div>
       <!-- Map Display -->
