--- a/index.html
+++ b/index.html
@@ -14,21 +14,16 @@
     <title>Movers Not Shakers</title>
   </head>
   <!-- BODY--> 
-  <body>
+  <body class="has-background-black">
       <!-- HEADER 1--> 
-    <nav class="navbar is-fixed-top is-white pl-6">
+    <nav class="navbar has-shadow is-transparent is-spaced is-black">
       <!-- logo -->
       <div class="navbar-brand">
         <a class="navbar-item">
           <img src="assets/images/Movers not shakers logo.jpg" alt="site logo" style="max-height: 100px" class= py-2 px-2>
         </a>
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
       </div>
-
+      <!-- navbar menu -->
       <div class="navbar-menu is-active">
         <div class="navbar-start">
           <a href="#nav-about" class="navbar-item title">About us</a>
@@ -50,22 +45,21 @@
 <!-- TILES--> 
     <!-- Description -->
     <div class="tile is-ancestor">
-      <div class="tile is-6 is-vertical is-parent">
-        <p class="title py-3" id="nav-about">About us</p>
-        <p class="subtitle">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+      <div class="tile is-5 is-vertical is-parent">
+        <p class="title ml-5" id="nav-about">About us</p>
+        <p class="subtitle ml-5">
+          Are you deathly scared of earthquakes but are also an avid travler? Are you sick 
+          of wasting time checking multiple sites to cross refrence seismic information with
+          your travel plans? Here at Movers Not Shakers&copy; we strive to simplify your query 
+          needs by condensing both into one easy to use search engine. Simply enter the City,
+          State or Country in which you plan to travel and you will be provided with the most 
+          recent seismic activity along with the weather for that area.
         </p>
         <!-- Search Form -->
         <div class="tile is-6 is-child is-size-5">
-          <p class="title" id="nav-search">Search</p>
+          <p class="title ml-5" id="nav-search">Search</p>
           <div class="field is-grouped" id="search-form">
-            <div class="control has-icons-left">
+            <div class="control has-icons-left ml-5">
               <input class="input is-info is-rounded is-medium" type="text" placeholder="Country" id="search-term">
               <span class="icon is-left">
                 <i class="fas fa-globe"></i>
@@ -81,15 +75,15 @@
           </div>
         </div>
         <!-- Weather API Return -->
-        <div class="tile is-4 is-child is-size-5" id="weather-container">
-          <p class="title" id="nav-forecast">Today's Forecast</p>
+        <div class="tile is-4 is-child is-size-5 ml-5" id="weather-container">
+          <p class="title ml-5" id="nav-forecast">Today's Forecast</p>
         </div>
       </div>
       <!-- Map Display -->
       <div class="tile is-10 is-parent">
-        <div class="tile is-child box is-danger">
-          <p class="title" id="nav-map">Map</p>
-          <div id="map" class="tile is-10"></div>
+        <div class="tile is-child box-is-black">
+          <p class="title has-background-b ml-5" id="nav-map">Map</p>
+          <div id="map" class="tile is-10 ml-5"></div>
         </div>
       </div>
     </div>
@@ -100,8 +94,11 @@
       Movers Not Shakers Inc.
     </footer>
 <!-- Google API link -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDh_
-      l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=initMap&libraries=places"
+    <script async defer src=
+    
+    
+    "https://maps.googleapis.com/maps/api/js?key=AIzaSyBDh_
+    l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=initMap&libraries=places"
     type="text/javascript"></script>
 <!-- Search links -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
