updated nav to have a contact link and updated search button to grey in bulma

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <div class="navbar-start">
           <a href="#nav-forecast" class="navbar-item title">Forecast</a>
         </div>
+      <div class="navbar-menu is-active">
+        <div class="navbar-start">
+          <a href="mailto:contact@moversnotshakers.com" class="navbar-item title">Contact Us</a>
+        </div>
       </div>
     </nav>
 <!-- TILES--> 
@@ -66,7 +70,7 @@
               </span>
             </div>
             <div class="control has-icons-left">
-              <button class="button is-info is-medium" type="submit" id="search-btn">
+              <button class="button is-dark is-medium" type="submit" id="search-btn">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
