updated about us section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="tile is-5 is-vertical is-parent">
         <p class="title ml-5" id="nav-about">About us</p>
         <p class="subtitle ml-5">
-          Are you deathly scared of earthquakes but are also an avid travler? Are you sick 
+          Are you deathly scared of earthquakes but also an avid travler? Are you sick 
           of wasting time checking multiple sites to cross refrence seismic information with
           your travel plans? Here at Movers Not Shakers&copy; we strive to simplify your query 
           needs by condensing both into one easy to use search engine. Simply enter the City,
