updated styles and map

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
       Movers Not Shakers Inc.
     </footer>
 <!-- Google API link -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script async defer src=
-    
-    
     "https://maps.googleapis.com/maps/api/js?key=AIzaSyBDh_
-    l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=initMap&libraries=places"
+    l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=initMap&libraries=places&v=weekly"
+    defer 
     type="text/javascript"></script>
 <!-- Search links -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
