--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="icon" type="image/png" href="./assets/images/earthquake-favicon.png" />
+    <!-- Earthquake Circles -->
+   
     <title>Movers Not Shakers</title>
   </head>
   <!-- BODY--> 
@@ -73,7 +74,11 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDh_
       l8hWuiFHDGps-sQqN1pBckdYoceNs&callback=initMap&libraries=places"
     type="text/javascript"></script>
-<!-- Search links -->
+    <!-- Earthquake Heat Map -->
+   <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDh_
+    l8hWuiFHDGps-sQqN1pBckdYoceNs&libraries=visualization&callback=initMap"></script>  
+   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <!-- Search links -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
