--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- navbar menu -->
       <div class="navbar-menu is-active">
         <div class="navbar-start">
-          <a href="#nav-about" class="navbar-item title">About us</a>
+          <a href="#nav-about" class="navbar-item title">About Us</a>
         </div>
       <div class="navbar-menu is-active">
         <div class="navbar-start">
@@ -50,10 +50,10 @@
     <!-- Description -->
     <div class="tile is-ancestor">
       <div class="tile is-5 is-vertical is-parent">
-        <p class="title ml-5" id="nav-about">About us</p>
+        <p class="title ml-5" id="nav-about">About Us</p>
         <p class="subtitle ml-5">
-          Are you deathly scared of earthquakes but also an avid travler? Are you sick 
-          of wasting time checking multiple sites to cross refrence seismic information with
+          Are you deathly scared of earthquakes but also an avid traveler? Are you sick 
+          of wasting time checking multiple sites to cross reference seismic information with
           your travel plans? Here at Movers Not Shakers&copy; we strive to simplify your query 
           needs by condensing both into one easy to use search engine. Simply enter the City,
           State or Country in which you plan to travel and you will be provided with the most 
@@ -64,7 +64,7 @@
           <p class="title ml-5" id="nav-search">Search</p>
           <div class="field is-grouped" id="search-form">
             <div class="control has-icons-left ml-5">
-              <input class="input is-info is-rounded is-medium" type="text" placeholder="Country" id="search-term">
+              <input class="input is-info is-rounded is-medium" type="text" placeholder="Location" id="search-term">
               <span class="icon is-left">
                 <i class="fas fa-globe"></i>
               </span>
