--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- navbar menu -->
       <div class="navbar-menu is-active">
         <div class="navbar-start">
-          <a href="#nav-about" class="navbar-item title">About us</a>
+          <a href="#nav-about" class="navbar-item title">About Us</a>
         </div>
       <div class="navbar-menu is-active">
         <div class="navbar-start">
@@ -34,7 +34,7 @@
         </div>
       <div class="navbar-menu is-active">
         <div class="navbar-start">
-          <a href="#nav-map" class="navbar-item title">Map</a>
+          <a href="#map" class="navbar-item title">Map</a>
         </div>
       <div class="navbar-menu is-active">
         <div class="navbar-start">
@@ -86,7 +86,7 @@
       <!-- Map Display -->
       <div class="tile is-10 is-parent">
         <div class="tile is-child box-is-black">
-          <p class="title has-background-b ml-5" id="nav-map">Map</p>
+          <p class="title has-background-b ml-5">Map</p>
           <div id="map" class="tile is-10 ml-5"></div>
         </div>
       </div>
@@ -96,7 +96,19 @@
       class="is-size-5  mt-6 mr-6 pb-6 pl-6"
     >
       Movers Not Shakers Inc.
-    </footer>
+  </footer>
+      <div class="modal" id="error-modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+          <header class="modal-card-head">
+            <p class="modal-card-title">Error</p>
+            <button class="delete" aria-label="close" id="close" onclick="closeModal()"></button>
+          </header>
+          <section class="modal-card-body">
+            <p id="error"></p>
+          </section>
+        </div>
+      </div>
 <!-- Google API link -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script async defer src=
