changed placeholder text for search input

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <p class="title ml-5" id="nav-search">Search</p>
           <div class="field is-grouped" id="search-form">
             <div class="control has-icons-left ml-5">
-              <input class="input is-info is-rounded is-medium" type="text" placeholder="Location" id="search-term">
+              <input class="input is-info is-rounded is-medium" type="text" placeholder="City, State or Country" id="search-term">
               <span class="icon is-left">
                 <i class="fas fa-globe"></i>
               </span>
