--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Movers Not Shakers</title>
   </head>
   <!-- BODY--> 
-  <body class="has-background-black">
+  <body>
       <!-- HEADER 1--> 
     <nav class="navbar has-shadow is-transparent is-spaced is-black">
       <!-- logo -->
@@ -50,7 +50,7 @@
 <!-- TILES--> 
     <!-- Description -->
     <div class="tile is-ancestor">
-      <div class="tile is-5 is-vertical is-parent">
+      <div class="tile is-6 is-vertical is-parent">
         <p class="title ml-5" id="nav-about">About Us</p>
         <p class="subtitle ml-5">
           Are you deathly scared of earthquakes but also an avid traveler? Are you sick 
@@ -83,11 +83,15 @@
         <div class="tile is-4 is-child is-size-5 ml-5" id="weather-container">
           <p class="title ml-5" id="nav-forecast">Today's Forecast</p>
         </div>
+      <!-- New API Return -->
+      <div class="tile is-4 is-child is-size-5 ml-5" id="">
+        <p class="title ml-5" id="nav-forecast">New API</p>
       </div>
+    </div>
       <!-- Map Display -->
       <div class="tile is-10 is-parent">
-        <div class="tile is-child box-is-black">
-          <p class="title has-background-b ml-5" id="nav-map">Map</p>
+        <div class="tile is-child ">
+          <p class="title ml-5" id="nav-map">Map</p>
           <div id="map" class="tile is-10 ml-5"></div>
         </div>
       </div>
