add bike layer and drop pin animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="icon" type="image/png" href="./assets/images/earthquake-favicon.png" />
     <!-- Earthquake Circles -->
-   
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <title>Movers Not Shakers</title>
   </head>
   <!-- BODY--> 
@@ -84,7 +84,7 @@
           <p class="title ml-5" id="nav-forecast">Today's Forecast</p>
         </div>
       <!-- New API Return -->
-      <div class="tile is-4 is-child is-size-5 ml-5" id="">
+      <div class="tile is-3 is-child is-size-5 ml-5" id="new">
         <p class="title ml-5" id="nav-forecast">New API</p>
       </div>
     </div>
@@ -112,7 +112,6 @@
     <!-- Earthquake Heat Map -->
    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDh_
     l8hWuiFHDGps-sQqN1pBckdYoceNs&libraries=visualization&callback=initMap"></script>  
-   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <!-- Search links -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
