removed onclick id in modal as not needed anymore and removed console log from click listener

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="modal-card">
           <header class="modal-card-head has-background-danger">
             <p class="modal-card-title">Error</p>
-            <button class="delete" aria-label="close" id="close" onclick="closeModal()"></button>
+            <button class="delete" aria-label="close" id="close"></button>
           </header>
           <section class="modal-card-body">
             <p id="error"></p>
