--- a/index.html
+++ b/index.html
@@ -24,32 +24,26 @@
   <!-- BODY--> 
   <body>
       <!-- HEADER 1--> 
-    <nav class="navbar has-shadow is-transparent is-spaced is-black">
+    <nav class="navbar has-shadow is-spaced  tile is-12">
       <!-- logo -->
       <div class="navbar-brand">
         <a class="navbar-item">
           <img src="assets/images/Movers not shakers logo.jpg" alt="site logo" style="max-height: 100px" class= py-2 px-2>
         </a>
+        <a class ="navbar-burger" id= "burger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+        
       </div>
       <!-- navbar menu -->
-      <div class="navbar-menu is-active">
+      <div class="navbar-menu is-active" id="nav-links">
         <div class="navbar-start">
           <a href="#nav-about" class="navbar-item title">About Us</a>
-        </div>
-      <div class="navbar-menu is-active">
-        <div class="navbar-start">
           <a href="#nav-search" class="navbar-item title">Search</a>
-        </div>
-      <div class="navbar-menu is-active">
-        <div class="navbar-start">
           <a href="#nav-map" class="navbar-item title">Map</a>
-        </div>
-      <div class="navbar-menu is-active">
-        <div class="navbar-start">
           <a href="#nav-forecast" class="navbar-item title">Forecast</a>
-        </div>
-      <div class="navbar-menu is-active">
-        <div class="navbar-start">
           <a href="mailto:contact@moversnotshakers.com" class="navbar-item title">Contact Us</a>
         </div>
       </div>
@@ -77,7 +71,7 @@
                 <i class="fas fa-globe"></i>
               </span>
             </div>
-            <div class="control has-icons-left">
+            <div class="control has-icons-center">
               <button class="button is-dark is-medium" type="submit" id="search-btn">
                 <span class="icon">
                   <i class="fas fa-search"></i>
@@ -100,10 +94,10 @@
       </div>
     </div>
 <!-- FOOTER-->     
-    <footer
-      class="is-size-5  mt-6 mr-6 pb-6 pl-6"
-    >
-      Movers Not Shakers Inc.
+    <footer class="footer title ml-5 is-black">
+      <div class ="content has-text-centered">
+      <p> Movers Not Shakers Inc. </p>
+      </div>
     </footer>
 <!-- Google API link -->
    <!--  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
