update footer to center

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <i class="fas fa-globe"></i>
               </span>
             </div>
-            <div class="control has-icons-left">
+            <div class="control has-icons-center">
               <button class="button is-dark is-medium" type="submit" id="search-btn">
                 <span class="icon">
                   <i class="fas fa-search"></i>
@@ -92,10 +92,10 @@
       </div>
     </div>
 <!-- FOOTER-->     
-    <footer
-      class="is-size-5  mt-6 mr-6 pb-6 pl-6"
-    >
-      Movers Not Shakers Inc. Maria
+    <footer class="footer title ml-5">
+      <div class="content has-text-centered">
+      <p>Movers Not Shakers Inc.</p>
+    </div>
   </footer>
       <div class="modal" id="error-modal">
         <div class="modal-background"></div>
