updated about-us to how to use our site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- navbar menu -->
       <div class="navbar-menu is-active">
         <div class="navbar-start">
-          <a href="#nav-about" class="navbar-item title">About Us</a>
+          <a href="#nav-about" class="navbar-item title">How To</a>
         </div>
       <div class="navbar-menu is-active">
         <div class="navbar-start">
@@ -50,14 +50,12 @@
     <!-- Description -->
     <div class="tile is-ancestor">
       <div class="tile is-5 is-vertical is-parent">
-        <p class="title ml-5" id="nav-about" >About Us</p>
+        <p class="title ml-5" id="nav-about" >How To Use Our Site</p>
         <p class="subtitle ml-5">
-          Are you deathly scared of earthquakes but also an avid traveler? Are you sick 
-          of wasting time checking multiple sites to cross reference seismic information with
-          your travel plans? Here at Movers Not Shakers&copy; we strive to simplify your query 
-          needs by condensing both into one easy to use search engine. Simply enter the City,
-          State or Country in which you plan to travel and you will be provided with the most 
-          recent seismic activity along with the weather for that area.
+         Enter any City, State or Country in the search bar. The weather for that location will 
+         appear directly below. If the area has had any seismic activity recently a red circle 
+         will be displayed. The size of the circle relates to the magnitude of the most recent earthquake. 
+         The larger the circle - the bigger the earthquake in that location. 
         </p>
         <!-- Search Form -->
         <div class="tile is-6 is-child is-size-5">
