increase size of the map, center the degrees

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <title>Movers Not Shakers</title>
   </head>
   <!-- BODY--> 
-  <body>
-      <!-- HEADER 1--> 
-    <div class="navbar py-4 px-4 has-shadow is-white has-text-small" role="navigation">
+  <body class= "has-background-dark Cantarell">
+      <!-- HEADER !--> 
+    <div class="navbar py-4 px-4 has-shadow is-white has-text-small media has-background-grey-light" role="navigation">
       <div class="container">
       <!-- logo -->
       <div class="navbar-brand">
         <a class="navbar-item" href="#nav-contact">
-          <img src="assets/images/Movers not shakers logo.jpg" alt="site logo" style="max-height: 200px" class= "py-2 px-2 is-inline-touch">
+          <img src="assets/images/Movers not shakers logo.jpg" alt="site logo" style="max-height: 150px" class= "py-2 px-2 is-inline-touch">
         </a>
       </div>
-      <div>
-        <a class="navbar-burger py-4 px-4" id="burger" aria-label="menu">
+      <div class="media level-right">
+        <a class="navbar-burger " id="burger" aria-label="menu" aria-expanded="false">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
@@ -41,7 +41,7 @@
           <a href="#nav-search" class="navbar-item title">Search</a>
         </div>
           <div class="navbar-end">
-          <a href="#nav-forecast" class="navbar-item title pr-3">Forecast</a>
+          <a href="#nav-forecast" class="navbar-item title">Forecast</a>
         </div>
         </div>
         </div>
@@ -50,10 +50,10 @@
 <!-- TILES--> 
     <!-- Description -->
     <div class="tile is-ancestor">
-      <div class="tile is-7 is-vertical is-parent py-6 my-6">
-       <div class="is-child box ">
-        <p class="title ml-5" id="nav-about" >About Us</p>
-        <p class="subtitle ml-5 py-4">
+      <div class="tile is-7 is-vertical is-parent py-6">
+       <div class="is-child box">
+        <p class="title ml-2" id="nav-about" >About Us</p>
+        <p class="subtitle py-3">
           Are you deathly scared of earthquakes but also an avid traveler? Are you sick 
           of wasting time checking multiple sites to cross reference seismic information with
           your travel plans? Here at Movers Not Shakers&copy; we strive to simplify your query 
@@ -63,11 +63,11 @@
         </p>
        </div>
         <!-- Search Form -->
-        <div class="tile is-10 is-vertical is-child box is-size-5 py-6 my-6 is-inline-touch">
+        <div class="tile is-7 is-vertical is-child box is-size-5 py-6 my-6 is-inline-touch">
           <p class="title ml-5" id="nav-search">Search</p>
           <div class="field is-grouped" id="search-form">
             <div class="control has-icons-left ml-5">
-              <input class="input is-info is-rounded is-large" type="text" placeholder="City, State or Country" id="search-term">
+              <input class="input is-info is-rounded is-medium" type="text" placeholder="City, State or Country" id="search-term">
               <span class="icon is-left">
                 <i class="fas fa-globe"></i>
               </span>
@@ -82,14 +82,14 @@
           </div>
         </div>
         <!-- Weather API Return -->
-        <div class="tile is-7 is-child box is-size-5 ml-1 py-6 my-6" id="weather-container">
+        <div class="tile is-7 is-child box is-size-5 ml-1 py-5 my-6" id="weather-container">
           <p class="title ml-5" id="nav-forecast">Today's Forecast</p>
         </div>
-      </div>
+    </div>
       <!-- Map Display -->
      <div id="mp1">
       <div class="tile is-parent py-6 is-vertical">
-        <div class="tile is-10 is-child box py-6">
+        <div class="tile is-12 is-child box py-6">
           <p class="title ml-5">Map</p> 
           <div id="map" class="tile is-12">
           </div>  
@@ -97,18 +97,20 @@
           </div>
           </div>
     </div>
-<!-- FOOTER-->     
-    <footer class="footer title ml-5 py-6 my-6 is-inline-touch">
+<!-- FOOTER-->
+<div class="has-background-grey-light">
+    <footer class="footer title ml-5 py-6 my-6 is-inline-touch has-background-grey-light">
       <div class="content has-text-centered">
         <div class="py-3" id="nav-contact">
-        <a href="mailto:contact@moversnotshakers.com"><i class="far fa-address-card ml-1 mx-1"></i>Contact Us
+        <a href="mailto:contact@moversnotshakers.com"><i class="far fa-address-card "></i>Contact Us
         </a>
       </div>
-      <div class="is-inline-touch ml-1 mx-1">
+      <div class="is-inline-touch ml-1 mx-6">
       <p>Movers Not Shakers Inc.</p>
       </div>
     </div>
   </footer>
+</div>
       <div class="modal" id="error-modal">
         <div class="modal-background"></div>
         <div class="modal-card">
